--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --toastify-font-family: Inter, sans-serif;
+  --toastify-color-success: #04ad0a;
+}
